# entitybase-import

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  INSTALLATION.md  USAGE.md
src/: cli.py  download_wikidata_entities.py  jsonl_import.py  state_manager.py
test_data/: test1.jsonl  test1.txt
tests/: conftest.py  test_cli.py  test_jsonl_import.py  test_state_manager.py
