[tool.poetry]
name = "entitybase-import"
version = "0.1.0"
description = "Command-line tool for importing entities into Entitybase Backend using the API"
authors = ["Nizo Priskorn <your.email@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.14"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.7.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
entitybase-import = "scripts.imports.jsonl_import:main"
