[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entitybase-import"
version = "0.1.0"
description = "Command-line tool for importing entities into Entitybase Backend using the API"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.7.0",
    "mypy>=1.9.0",
]

[project.scripts]
entitybase-import = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
